--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=1.0.0
 author=Andreas alpini
 maintainer=Andreas <info@https://github.com/Alpinine99/>
 sentence=Reading from a 4x4 keypad without pulldown resistors
-paragraph=easy just one function for reading a keypress else keyrelease
+paragraph=easy just one function for reading a key press else key release
 category=input devices
 url=https://github.com/Alpinine99
-architectures=c/c++ compatible boards
+architectures=AVR
 depends=no dependencies
